# Vamos-Group-Project

./: CMakeLists.txt  README.md  test.txt
data_set/: Toxic words dictionary.txt
include/: filing.h  hashtable.h  tokenize.h
src/: file.c  filing.c  hashmap.c  hashtable.c  main.c  sort.c  tokenize.c
